--- a/src/App.scss
+++ b/src/App.scss
@@ -86,3 +86,10 @@ body {
   background-color: rgba(0,0,0,0.5);
 }
 
+.map iframe {
+  left: 0;
+  top: 0;
+  height: 400px;
+  width: 100%;
+  border: none;
+}
